<resources>
    <string name="app_name">Graduation Project</string>
    <string name="pick_up_your_photo">Pick up your photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="day_of_birth">Day of Birth</string>
    <string name="i_accept_terms_amp_conditions"><![CDATA[I Accept Terms & Conditions]]></string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="signin">SignIn</string>
    <string name="welcome_in_napp_name">Welcome in \nApp Name</string>
    <string name="forgot_your_passwords">Forgot your passwords?</string>
    <string name="don_t_have_account">Don\'t Have Account ?</string>
    <string name="create_account">Create account</string>
    <string-array name="spinner_month">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="spinner_year">
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>male</item>
        <item>female</item>
    </string-array>

    <string-array name="state">
        <item>Select State</item>
        <item>Normal</item>
        <item>Deaf</item>
    </string-array>
</resources>