<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lower_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:background="@drawable/upper_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/photo"
            app:layout_constraintBottom_toTopOf="@id/pick_up_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/camera"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_image" />

        <TextView
            android:id="@+id/pick_up_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/pick_up_your_photo"
            android:textColor="#FCFCFC"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/edit_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view">

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/last_name"
                android:hint="@string/first_name"
                android:inputType="text"
                android:paddingHorizontal="@dimen/padding_horizontal_value" />

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/last_name"
                android:hint="@string/last_name"
                android:inputType="text"
                android:paddingHorizontal="@dimen/padding_horizontal_value" />

        </LinearLayout>


        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:background="@drawable/email_edit"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/padding_horizontal_value"
            app:layout_constraintBottom_toTopOf="@id/edit_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <EditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:layout_marginVertical="@dimen/margin_vertical_value"
            android:background="@drawable/pass_edit"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/padding_horizontal_value"
            app:layout_constraintBottom_toTopOf="@id/number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />


        <LinearLayout
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/birth_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_pass">


            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/code_shape"
                android:gravity="center"
                android:paddingHorizontal="4dp"
                app:ccp_textSize="12sp" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/phone_number"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingHorizontal="8dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/birth_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/spinner_select_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_value"
                android:layout_marginVertical="@dimen/margin_vertical_value"
                android:fontFamily="@font/andada"
                android:text="@string/day_of_birth"
                android:textColor="#000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/date"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/clender" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_select_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_horizontal_value"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:layout_marginVertical="@dimen/margin_vertical_value"
            android:background="@drawable/gender"
            app:layout_constraintBottom_toTopOf="@id/spinner_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birth_day" />

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_horizontal_value"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:background="@drawable/state"
            app:layout_constraintBottom_toTopOf="@id/check_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/spinner_select_gender" />

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:layout_marginVertical="@dimen/margin_vertical_value"
            android:text="@string/i_accept_terms_amp_conditions"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_state" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:layout_marginVertical="@dimen/margin_vertical_value"
            android:layout_marginTop="20dp"
            android:background="@drawable/sign_up_button"
            app:layout_constraintBottom_toTopOf="@id/have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_box" />

        <LinearLayout
            android:id="@+id/have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_value"
            android:layout_marginVertical="@dimen/margin_vertical_value"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
