<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#483889"
    tools:context=".ui.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_screen"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="372.6dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="204.4dp">

            <ImageView
                android:layout_width="360dp"
                android:layout_height="336dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/sign_in_info_background" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/sign_in_photo" />

            <EditText
                android:id="@+id/sign_in_email_edit_text"
                android:layout_width="315dp"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/margin_horizontal_value"
                android:layout_marginTop="82.6dp"
                android:autofillHints=""
                android:background="@drawable/sign_in_edit_text_background"
                android:fontFamily="@font/andlso"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="34dp" />

            <EditText
                android:id="@+id/sign_in_password_edit_text"
                android:layout_width="315dp"
                android:layout_height="55dp"
                android:layout_below="@id/sign_in_email_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/margin_horizontal_value"
                android:layout_marginTop="45dp"
                android:background="@drawable/sign_in_edit_text_background"
                android:fontFamily="@font/andlso"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="34dp" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="193dp"
                android:layout_height="56dp"
                android:layout_below="@id/sign_in_password_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:background="@drawable/sign_in_btn_background"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/andlso"
                android:text="Log In"
                android:textColor="#D6484747"
                android:textSize="28sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/sign_in_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/andlso"
            android:gravity="center"
            android:text="@string/forgot_your_passwords"
            android:textColor="#F8EBE7"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="2dp"
                android:background="#33F0EDED" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/andlso"
                android:text="OR"
                android:textColor="#B5DBDBDB"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="96dp"
                android:layout_height="2dp"
                android:background="#33F0EDED" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sign_in_by_google_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/sign_in_google_icon" />

            <ImageView
                android:id="@+id/sign_in_by_facebook_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/sign_in_facebook_icon" />

            <ImageView
                android:id="@+id/sign_in_by_twitter_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/sign_in_twitter_icon" />

            <ImageView
                android:id="@+id/sign_in_by_instagram_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/sign_in_instagram_icon" />

        </LinearLayout>

        <ImageView
            android:layout_width="231dp"
            android:layout_height="2dp"
            android:layout_marginTop="15.5dp"
            android:background="#33F0EDED" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="27.5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/andlso"
                android:text="Don't have account ?"
                android:textColor="#CCF8EBE7"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sign_in_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/andlso"
                android:text=" Create One"
                android:textColor="#CCF8EBE7"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>